fixed the alignment issue on the results list

--- a/client/src/components/ResultsList/ResultsList.css
+++ b/client/src/components/ResultsList/ResultsList.css
@@ -88,3 +88,7 @@ td.list-like {
     height: 100%;
     width: 100%;
 }
+
+.list-info {
+width: 100%;
+}
